zmq_bindings.dart


  int zmq_sendiov(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<iovec> iov_,
    int count_,
    int flags_,
  ) {
    return _zmq_sendiov(
      s_,
      iov_,
      count_,
      flags_,
    );
  }

  late final _zmq_sendiovPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<iovec>, ffi.Size,
              ffi.Int)>>('zmq_sendiov');
  late final _zmq_sendiov = _zmq_sendiovPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<iovec>, int, int)>();

  int zmq_recviov(
    ffi.Pointer<ffi.Void> s_,
    ffi.Pointer<iovec> iov_,
    ffi.Pointer<ffi.Size> count_,
    int flags_,
  ) {
    return _zmq_recviov(
      s_,
      iov_,
      count_,
      flags_,
    );
  }

  late final _zmq_recviovPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<iovec>,
              ffi.Pointer<ffi.Size>, ffi.Int)>>('zmq_recviov');
  late final _zmq_recviov = _zmq_recviovPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<iovec>,
          ffi.Pointer<ffi.Size>, int)>();

  /// /
  ffi.Pointer<ffi.Char> zmq_z85_encode(
    ffi.Pointer<ffi.Char> dest_,
    ffi.Pointer<ffi.Uint8> data_,
    int size_,
  ) {
    return _zmq_z85_encode(
      dest_,
      data_,
      size_,
    );
  }

  late final _zmq_z85_encodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('zmq_z85_encode');
  late final _zmq_z85_encode = _zmq_z85_encodePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>, int)>();

  ffi.Pointer<ffi.Uint8> zmq_z85_decode(
    ffi.Pointer<ffi.Uint8> dest_,
    ffi.Pointer<ffi.Char> string_,
  ) {
    return _zmq_z85_decode(
      dest_,
      string_,
    );
  }

  late final _zmq_z85_decodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Char>)>>('zmq_z85_decode');
  late final _zmq_z85_decode = _zmq_z85_decodePtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(
          ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Char>)>();

  int zmq_curve_keypair(
    ffi.Pointer<ffi.Char> z85_public_key_,
    ffi.Pointer<ffi.Char> z85_secret_key_,
  ) {
    return _zmq_curve_keypair(
      z85_public_key_,
      z85_secret_key_,
    );
  }

  late final _zmq_curve_keypairPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('zmq_curve_keypair');
  late final _zmq_curve_keypair = _zmq_curve_keypairPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int zmq_curve_public(
    ffi.Pointer<ffi.Char> z85_public_key_,
    ffi.Pointer<ffi.Char> z85_secret_key_,
  ) {
    return _zmq_curve_public(
      z85_public_key_,
      z85_secret_key_,
    );
  }

  late final _zmq_curve_publicPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('zmq_curve_public');
  late final _zmq_curve_public = _zmq_curve_publicPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// /
  ffi.Pointer<ffi.Void> zmq_atomic_counter_new() {
    return _zmq_atomic_counter_new();
  }

  late final _zmq_atomic_counter_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'zmq_atomic_counter_new');
  late final _zmq_atomic_counter_new =
      _zmq_atomic_counter_newPtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  void zmq_atomic_counter_set(
    ffi.Pointer<ffi.Void> counter_,
    int value_,
  ) {
    return _zmq_atomic_counter_set(
      counter_,
      value_,
    );
  }

  late final _zmq_atomic_counter_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Int)>>('zmq_atomic_counter_set');
  late final _zmq_atomic_counter_set = _zmq_atomic_counter_setPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int zmq_atomic_counter_inc(
    ffi.Pointer<ffi.Void> counter_,
  ) {
    return _zmq_atomic_counter_inc(
      counter_,
    );
  }

  late final _zmq_atomic_counter_incPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_atomic_counter_inc');
  late final _zmq_atomic_counter_inc = _zmq_atomic_counter_incPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_atomic_counter_dec(
    ffi.Pointer<ffi.Void> counter_,
  ) {
    return _zmq_atomic_counter_dec(
      counter_,
    );
  }

  late final _zmq_atomic_counter_decPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_atomic_counter_dec');
  late final _zmq_atomic_counter_dec = _zmq_atomic_counter_decPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_atomic_counter_value(
    ffi.Pointer<ffi.Void> counter_,
  ) {
    return _zmq_atomic_counter_value(
      counter_,
    );
  }

  late final _zmq_atomic_counter_valuePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_atomic_counter_value');
  late final _zmq_atomic_counter_value = _zmq_atomic_counter_valuePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void zmq_atomic_counter_destroy(
    ffi.Pointer<ffi.Pointer<ffi.Void>> counter_p_,
  ) {
    return _zmq_atomic_counter_destroy(
      counter_p_,
    );
  }

  late final _zmq_atomic_counter_destroyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Void>>)>>(
      'zmq_atomic_counter_destroy');
  late final _zmq_atomic_counter_destroy = _zmq_atomic_counter_destroyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<ffi.Void>>)>();

  ffi.Pointer<ffi.Void> zmq_timers_new() {
    return _zmq_timers_new();
  }

  late final _zmq_timers_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'zmq_timers_new');
  late final _zmq_timers_new =
      _zmq_timers_newPtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  int zmq_timers_destroy(
    ffi.Pointer<ffi.Pointer<ffi.Void>> timers_p,
  ) {
    return _zmq_timers_destroy(
      timers_p,
    );
  }

  late final _zmq_timers_destroyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Pointer<ffi.Void>>)>>('zmq_timers_destroy');
  late final _zmq_timers_destroy = _zmq_timers_destroyPtr
      .asFunction<int Function(ffi.Pointer<ffi.Pointer<ffi.Void>>)>();

  int zmq_timers_add(
    ffi.Pointer<ffi.Void> timers,
    int interval,
    ffi.Pointer<zmq_timer_fn> handler,
    ffi.Pointer<ffi.Void> arg,
  ) {
    return _zmq_timers_add(
      timers,
      interval,
      handler,
      arg,
    );
  }

  late final _zmq_timers_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<zmq_timer_fn>,
              ffi.Pointer<ffi.Void>)>>('zmq_timers_add');
  late final _zmq_timers_add = _zmq_timers_addPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<zmq_timer_fn>,
          ffi.Pointer<ffi.Void>)>();

  int zmq_timers_cancel(
    ffi.Pointer<ffi.Void> timers,
    int timer_id,
  ) {
    return _zmq_timers_cancel(
      timers,
      timer_id,
    );
  }

  late final _zmq_timers_cancelPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'zmq_timers_cancel');
  late final _zmq_timers_cancel = _zmq_timers_cancelPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int zmq_timers_set_interval(
    ffi.Pointer<ffi.Void> timers,
    int timer_id,
    int interval,
  ) {
    return _zmq_timers_set_interval(
      timers,
      timer_id,
      interval,
    );
  }

  late final _zmq_timers_set_intervalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int,
              ffi.Size)>>('zmq_timers_set_interval');
  late final _zmq_timers_set_interval = _zmq_timers_set_intervalPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  int zmq_timers_reset(
    ffi.Pointer<ffi.Void> timers,
    int timer_id,
  ) {
    return _zmq_timers_reset(
      timers,
      timer_id,
    );
  }

  late final _zmq_timers_resetPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'zmq_timers_reset');
  late final _zmq_timers_reset = _zmq_timers_resetPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int zmq_timers_timeout(
    ffi.Pointer<ffi.Void> timers,
  ) {
    return _zmq_timers_timeout(
      timers,
    );
  }

  late final _zmq_timers_timeoutPtr =
      _lookup<ffi.NativeFunction<ffi.Long Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_timers_timeout');
  late final _zmq_timers_timeout =
      _zmq_timers_timeoutPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_timers_execute(
    ffi.Pointer<ffi.Void> timers,
  ) {
    return _zmq_timers_execute(
      timers,
    );
  }

  late final _zmq_timers_executePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_timers_execute');
  late final _zmq_timers_execute =
      _zmq_timers_executePtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// /
  ffi.Pointer<ffi.Void> zmq_stopwatch_start() {
    return _zmq_stopwatch_start();
  }

  late final _zmq_stopwatch_startPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'zmq_stopwatch_start');
  late final _zmq_stopwatch_start =
      _zmq_stopwatch_startPtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  int zmq_stopwatch_intermediate(
    ffi.Pointer<ffi.Void> watch_,
  ) {
    return _zmq_stopwatch_intermediate(
      watch_,
    );
  }

  late final _zmq_stopwatch_intermediatePtr = _lookup<
          ffi.NativeFunction<ffi.UnsignedLong Function(ffi.Pointer<ffi.Void>)>>(
      'zmq_stopwatch_intermediate');
  late final _zmq_stopwatch_intermediate = _zmq_stopwatch_intermediatePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int zmq_stopwatch_stop(
    ffi.Pointer<ffi.Void> watch_,
  ) {
    return _zmq_stopwatch_stop(
      watch_,
    );
  }

  late final _zmq_stopwatch_stopPtr = _lookup<
          ffi.NativeFunction<ffi.UnsignedLong Function(ffi.Pointer<ffi.Void>)>>(
      'zmq_stopwatch_stop');
  late final _zmq_stopwatch_stop =
      _zmq_stopwatch_stopPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void zmq_sleep(
    int seconds_,
  ) {
    return _zmq_sleep(
      seconds_,
    );
  }

  late final _zmq_sleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('zmq_sleep');
  late final _zmq_sleep = _zmq_sleepPtr.asFunction<void Function(int)>();

  ffi.Pointer<ffi.Void> zmq_threadstart(
    ffi.Pointer<zmq_thread_fn> func_,
    ffi.Pointer<ffi.Void> arg_,
  ) {
    return _zmq_threadstart(
      func_,
      arg_,
    );
  }

  late final _zmq_threadstartPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<zmq_thread_fn>,
              ffi.Pointer<ffi.Void>)>>('zmq_threadstart');
  late final _zmq_threadstart = _zmq_threadstartPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<zmq_thread_fn>, ffi.Pointer<ffi.Void>)>();

  void zmq_threadclose(
    ffi.Pointer<ffi.Void> thread_,
  ) {
    return _zmq_threadclose(
      thread_,
    );
  }

  late final _zmq_threadclosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'zmq_threadclose');
  late final _zmq_threadclose =
      _zmq_threadclosePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;
